RESOLVED FIXED228706
WebKitTestRunner should dump current results in the case of a timeout
https://bugs.webkit.org/show_bug.cgi?id=228706
Summary WebKitTestRunner should dump current results in the case of a timeout
Jer Noble
Reported 2021-08-02 10:14:35 PDT
WebKitTestRunner should dump current results in the case of a timeout
Attachments
Patch (1.97 KB, patch)
2021-08-02 10:20 PDT, Jer Noble
no flags
Patch (5.45 KB, patch)
2021-08-02 10:23 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2021-08-02 10:20:11 PDT
Jer Noble
Comment 2 2021-08-02 10:20:41 PDT
Jer Noble
Comment 3 2021-08-02 10:23:07 PDT
Jonathan Bedard
Comment 4 2021-08-03 11:22:30 PDT
Comment on attachment 434768 [details] Patch Played around with this a bit, tests which currently time out continue to, but a more reasonable diff. This seems like a good thing to land, and Jer is familiar with the media tests which are most likely to benefit from this sort of change.
EWS
Comment 5 2021-08-03 15:23:51 PDT
Committed r280619 (240232@main): <https://commits.webkit.org/240232@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434768 [details].
Note You need to log in before you can comment on or make changes to this bug.