Tools/WebKitTestRunner/TestInvocation.h
@@ -114,6 +114,10 @@ private:
     void initializeWaitToDumpWatchdogTimerIfNeeded();
     void invalidateWaitToDumpWatchdogTimer();
 
+    void waitForPostDumpWatchdogTimerFired();
+    void initializeWaitForPostDumpWatchdogTimerIfNeeded();
+    void invalidateWaitForPostDumpWatchdogTimer();
+    
     void done();
     void setWaitUntilDone(bool);
 
@@ -145,6 +149,7 @@ private:
     WKRetainPtr<WKURLRef> m_url;
     String m_urlString;
     RunLoop::Timer<TestInvocation> m_waitToDumpWatchdogTimer;
+    RunLoop::Timer<TestInvocation> m_waitForPostDumpWatchdogTimer;
 
     std::string m_expectedPixelHash;
 
